--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "webpack.config.js",
+    "Makefile"
   ]
 }
